# yt-summarizer

./: .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  api.py  api_documentation.json  caption_analyzer.py  pyproject.toml  requirements.txt  responses-api-docs.txt  youtube_analyzer.py  youtube_caption_scraper.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/Analysis/: AnalysisDashboard.tsx  InsightsPanel.tsx  TranscriptViewer.tsx  VideoInfo.tsx
frontend/src/components/Layout/: Header.tsx  Layout.tsx
frontend/src/components/Search/: SearchBar.tsx
frontend/src/components/UI/: ErrorDisplay.tsx  LoadingState.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: AnalyzerPage.tsx
frontend/src/types/: video.ts
frontend/src/utils/: api.ts  formatting.ts  validation.ts
